Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,138 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
+  	<header class="main-header">
+  		<nav class="main-navigation">
+  			<img class="header-logo" src="img/logo.svg" width="154px" height="64px" alt="logo Gllacy Shop">
+  			<ul class="navigation">
+  				<li><a href="#">Каталог</a></li>
+  				<li><a href="#">Доставка и оплата</a></li>
+  				<li><a href="#">О Компании</a></li>
+  			</ul>
+  			<ul class="user-navigation">
+  				<li class="search">Поиск</li>
+  				<li class="login">Вход</li>
+  				<li class="basket">Корзина</li>
+  			</ul>	
+  		</nav>
+  		<p class="header-time-info">С 10 до 20,ежедневно<br>
+  			<b>8 812 450-25-25</b></p>                             
+  	</header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+  	<main class="container">
+  		<h1 class="visually-hidden">Gllacy Shop</h1>
+  		<div class="slider">
+  			<ul>
+  				<li>
+  					<img src="img/slid-1.svg" width="" height="" alt="Пломбир">
+  					<p class="slid-text">Крем-брюле и пломбир с малиновым джемом</p>
+  				</li>
+  				<li>
+  					<img src="img/slid-2.svg" width="" height="" alt="Шоколадный пломбир">
+  					<p class="slid-text">Шоколадный пломбир и лимонный сорбет</p>
+  				</li>
+  				<li>
+  					<img src="img/slid-3.svg" width="" height="" alt="Пломбир с помадкой">
+  					<p class="slid-text">Пломбир с помадкой и клубничный щербет</p>
+  				</li>
+  			</ul>
+        <!--input type="radio"  ?? -->
+  			<a class="button" href="#">Давайте оба!</a>
+           </div>
+
+  		<section class="offers">
+  			<h2 class="visually-hidden">Выгодное предложение</h2>
+  		<div class="offers-jam">
+  			<h3>Малинка даром!</h3>
+  			<p>При покупке 2 кг любого фруктового мороженого,добавим в ваш заказ банку малинового варенья бесплатно.</p>
+  			<a class="button jam" href="#">Хочу варенье!</a>
+  		</div>
+  		<div class="offers-chocolate">
+  			<h3>Шоколадки даром!</h3>
+  			<p>При покупке 2 кг пломбира,добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно</p>
+  			<a class="button chocolate" href="#">Хочу шоколадки!</a>
+     	</div>
+  		</section>
+
+  		<section class="bestseller">
+  			<ul class="bestseller-item">
+  				<li>
+  					<img src="#" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+  					<p class="price">310 ₽<span>/кг</span></p>
+  					<p class="description"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
+  					<button type="button" class="hover">Быстрый просмотр</button>
+  				</li>
+  				<li>
+  					<img src="#" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+  					<p class="price">380 ₽<span>/кг</span></p>
+  					<p class="description"><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
+  					<button type="button" class="hover">Быстрый просмотр</button>
+  				</li>
+  				<li>
+  					<img src="#" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+  					<p class="price">355 ₽<span>/кг</span></p>
+  					<p class="description"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
+  					<button type="button" class="hover">Быстрый просмотр</button>
+  				</li>
+  				<li>
+  					<img src="#" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+  					<p class="price">415 ₽<span>/кг</span></p>
+  					<p class="description"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
+  					<button type="button" class="hover">Быстрый просмотр</button>
+  				</li>
+  			</ul>
+        </section>
+
+        <div class="info-gllacy">
+        	<h3>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+        	<ul class="about-ice-cream">
+        		<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+        		<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+        		<li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+        		<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+        	</ul>
+        </div>
+
+        <div class="info">
+        	<article class="blog">
+        		<p>Новое в нашем блоге"</p>
+            <p class="blog-article"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
+        	</article>
+        	<section class="subscribe">
+        		<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
+        		<!-- Форма -->
+
+        	</section>
+        </div>
+
+        <section class="map">
+          <img src="img/map.svg" width="" height="" alt="карта">
+          <div class="address">
+          	<p>Адрес главного офиса и офлайн-магазина:<b>ул.Большая Конюшенная 19/8,Санкт-Петербург</b></p>
+          	<p>Для заказов по телефону:<b>8 812 450-25-25</b>(с 10 до 20 ежедневно)</p>
+          <button type="button">Форма обратной связи</button>
+          </div>	
+        </section>
+  	</main>
+
+  	<footer>
+  		<ul class="footer-social">
+  			<li><a class="social-buttom twitter" href="#">Твитер</a></li>
+  			<li><a class="social-buttom insta" href="#"></a>Инстаграм</li>
+  			<li><a class="social-buttom fb" href="#"></a>Фейсбук</li>
+  			<li><a class="social-buttom vk" href="#"></a>Вконтакте</li>
+  		</ul>
+  		<ul class="footer-info">
+  			<li><a href="#">Для поставщиков</a></li>
+  			<li><a href="#">Наши документы</a></li>
+  			<li><a href="#">О производстве</a></li>
+  			<li><a href="#">Экологические стандарты</a></li>
+  		</ul>
+  		<div class="footer-copyright">
+  			<p>html academy</p>
+  			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
+  		</div>
+  	</footer>
 
   </body>
-</html>
+  </html>
