--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <div class="slider">
         <ul class="slider-image">
           <li>
-            <img src="img/slid-1.svg" width="" height="" alt="Пломбир">
+            <img src="img/slid-1.png" width="1045" height="881" alt="Пломбир">
             <p class="slid-text">Крем-брюле и пломбир с малиновым джемом</p>
           </li>
           <li>
-            <img src="img/slid-2.svg" width="" height="" alt="Шоколадный пломбир">
+            <img src="img/slid-2.png" width="1045" height="881" alt="Шоколадный пломбир">
             <p class="slid-text">Шоколадный пломбир и лимонный сорбет</p>
           </li>
           <li>
-            <img src="img/slid-3.svg" width="" height="" alt="Пломбир с помадкой">
+            <img src="img/slid-3.png" width="1045" height="881" alt="Пломбир с помадкой">
             <p class="slid-text">Пломбир с помадкой и клубничный щербет</p>
           </li>
         </ul>
@@ -63,25 +63,25 @@
       </section>
       <ul class="bestseller-item">
         <li>
-          <img src="#" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <img src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <p class="price">310 ₽<span>/кг</span></p>
           <p class="description"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
           <button type="button" class="hover">Быстрый просмотр</button>
         </li>
         <li>
-          <img src="#" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+          <img src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           <p class="price">380 ₽<span>/кг</span></p>
           <p class="description"><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
           <button type="button" class="hover">Быстрый просмотр</button>
         </li>
         <li>
-          <img src="#" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <img src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           <p class="price">355 ₽<span>/кг</span></p>
           <p class="description"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
           <button type="button" class="hover">Быстрый просмотр</button>
         </li>
         <li>
-          <img src="#" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+          <img src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
           <p class="price">415 ₽<span>/кг</span></p>
           <p class="description"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
           <button type="button" class="hover">Быстрый просмотр</button>
@@ -98,7 +98,7 @@
       </div>
       <div class="info">
         <article class="blog">
-          <h2>Новое в нашем блоге"</h2>
+          <h2>"Новое в нашем блоге"</h2>
           <p class="blog-article"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
         </article>
         <section class="subscribe">
@@ -118,9 +118,9 @@
     <footer>
       <ul class="footer-social">
         <li><a class="social-buttom twitter" href="#">Твитер</a></li>
-        <li><a class="social-buttom insta" href="#"></a>Инстаграм</li>
-        <li><a class="social-buttom fb" href="#"></a>Фейсбук</li>
-        <li><a class="social-buttom vk" href="#"></a>Вконтакте</li>
+        <li><a class="social-buttom insta" href="#">Инстаграм</a></li>
+        <li><a class="social-buttom fb" href="#">Фейсбук</a></li>
+        <li><a class="social-buttom vk" href="#">Вконтакте</a></li>
       </ul>
       <ul class="footer-info">
         <li><a href="#">Для поставщиков</a></li>
@@ -129,7 +129,7 @@
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
       <div class="footer-copyright">
-        <img class="html-logo" src="img/html-logo.svg" width="" height="">
+        <img class="html-logo" src="img/logo-htmlacademy.svg" width="108" height="39">
         <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
       </div>
     </footer>
