--- a/catalog.html
+++ b/catalog.html
@@ -50,73 +50,73 @@
           <section class="creamy-ice-cream">
             <ul class="creamy-item">
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                <img src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 <p class="price">310 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                <img src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 <p class="price">380 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <img src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 <p class="price">355 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                <img src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 <p class="price">415 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное с брусничным джемом">
+                <img src="img/icecream-2a.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
                 <p class="price">325 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное с брусничным джемом</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+                <img src="img/icecream-2b.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
                 <p class="price">410 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочно-черничное с цельными ягодами черники</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+                <img src="img/icecream-2c.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
                 <p class="price">375 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочно-лимонное с карамельной присыпкой</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+                <img src="img/icecream-2d.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
                 <p class="price">320 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное с шоколадной стружкой</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+                <img src="img/icecream-3a.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
                 <p class="price">440 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочно-ванильное с кусочками шоколада</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+                <img src="img/icecream-3b.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
                 <p class="price">435 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное с ментоловым сиропом</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+                <img src="img/icecream-3c.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
                 <p class="price">355 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное с кусочками черного шоколада</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
               </li>
               <li>
-                <img src="#" width="267" height="267" alt="Сливочное с мятным сиропом">
+                <img src="img/icecream-3d.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
                 <p class="price">420 ₽<span>/кг</span></p>
                 <p class="description"><a href="#">Сливочное с мятным сиропом</a></p>
                 <button type="button" class="hover">Быстрый просмотр</button>
@@ -136,9 +136,9 @@
         <footer>
           <ul class="footer-social">
             <li><a class="social-buttom twitter" href="#">Твитер</a></li>
-            <li><a class="social-buttom insta" href="#"></a>Инстаграм</li>
-            <li><a class="social-buttom fb" href="#"></a>Фейсбук</li>
-            <li><a class="social-buttom vk" href="#"></a>Вконтакте</li>
+            <li><a class="social-buttom insta" href="#">Инстаграм</a></li>
+            <li><a class="social-buttom fb" href="#">Фейсбук</a></li>
+            <li><a class="social-buttom vk" href="#">Вконтакте</a></li>
           </ul>
           <ul class="footer-info">
             <li><a href="#">Для поставщиков</a></li>
@@ -147,7 +147,7 @@
             <li><a href="#">Экологические стандарты</a></li>
           </ul>
           <div class="footer-copyright">
-            <img class="html-logo" src="img/html-logo.svg" width="" height="">
+            <img class="html-logo" src="img/logo-htmlacademy.svg" width="108" height="39">
             <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
           </div>
         </footer>
