добавление фонового цвета для блоков с фоновым изображением

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           </ul>
         </nav>
         <p class="header-time-info">С 10 до 20,ежедневно<br>
-          <span class="header-time-info--phone">8 812 450-25-25</span>
+          <span class="header-time-info__phone">8 812 450-25-25</span>
+        </p>
         </header>
         <main class="container">
           <h1 class="visually-hidden">Gllacy Shop</h1>
