--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <nav class="navigation">
         <a class="header-logo-link" href="index.html"><img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop"></a>
         <ul class="navigation-list">
-          <li class="navigation-list__item navigation-list__item"><a class="navigation-list__link" href="#">Каталог</a></li>
+          <li class="navigation-list__item navigation-list__item--open"><a class="navigation-list__link" href="#">Каталог</a></li>
           <li class="navigation-list__item"><a class="navigation-list__link" href="#">Доставка и оплата</a></li>
           <li class="navigation-list__item"><a class="navigation-list__link" href="#">О Компании</a></li>
         </ul>
@@ -60,7 +60,8 @@
         <li class="breadcrumbs__menu">Сливочное</li>
       </ul>
       <p class="header-time-info">С 10 до 20,ежедневно<br>
-      <span class="header-time-info--phone">8 812 450-25-25</span>
+      <span class="header-time-info__phone">8 812 450-25-25</span>
+    </p>
     </header>
     <main class="catalog">
       <h1 class="catalog__title">Сливочное мороженое</h1>
