попытка сделать резиновую сетку

--- a/catalog.html
+++ b/catalog.html
@@ -30,6 +30,7 @@
               </form>
             </li>
             <li class="user-nav__list user-nav__list_basket-full"><button type="button">Корзина</button>
+              <div class="purchase-wrap">
               <ul class="purchase">
                 <li class="purchase-item">
                   <span class="purchase-item__remove"><button class="remove-purchase" type="button">X</button></span>
@@ -47,9 +48,11 @@
               <span class="total"><b>Итого: 750 руб.</b>
               </span>
               <button class="button" type="button">Оформить заказ</button>
+            </div>
             </li>
           </ul>
         </nav>
+        <div class="time-info-wrap">
         <ul class="breadcrumbs">
           <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="index.html">Главная</a></li>
           <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="#">Каталог</a></li>
@@ -58,6 +61,7 @@
         <p class="header-time-info">С 10 до 20,ежедневно<br>
           <span class="header-time-info__phone">8 812 450-25-25</span>
         </p>
+      </div>
       </header>
       <main class="catalog">
         <h1 class="catalog__title">Сливочное мороженое</h1>
