--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="wrap-index">
       <header class="main-header">
-        <div class="navigation-wrap">
+        <div class="wrap">
         <nav class="navigation">
           <img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop">
           <ul class="navigation-list">
@@ -41,14 +40,15 @@
               <li class="user-nav__list user-nav__list--basket"><button class="user-nav__btn">Корзина</button></li>
             </ul>
           </nav>
-        </div>
         <div class="time-info-wrap">
           <p class="header-time-info">С 10 до 20,ежедневно<br>
             <span class="header-time-info__phone">8 812 450-25-25</span>
           </p>
         </div>
-        </header>
+      </div>
+      </header>
         <main class="container">
+          <div class="wrap">
           <h1 class="visually-hidden">Gllacy Shop</h1>
           <div class="slider">
             <ul class="slider-list">
@@ -136,6 +136,7 @@
               </form>
             </section>
           </div>
+        </div>
           <section class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
             <div class="address">
@@ -146,6 +147,7 @@
           </section>
         </main>
         <footer class="main-footer">
+          <div class="wrap">
           <ul class="social-btn">
             <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#">Твитер</a></li>
             <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#">Инстаграм</a></li>
@@ -161,9 +163,10 @@
         <li class="helpful-info__item"><a class="footer-link" href="#">Экологические стандарты</a></li>
       </ul>
       <div class="footer-copyright">
-        <img class="footer-copyright__html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="108" height="39">
+        <img class="footer-copyright__html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="110" height="39">
         <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
       </div>
+    </div>
     </footer>
     <!--Всплывающее окно -->
     <form class="feedback-form" method="post" action="https://echo.htmlacademy.ru">
@@ -174,6 +177,5 @@
       <textarea class="feedback-form-text" name="text" rows="5" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь"></textarea>
       <button type="submit" class="button">Отправить</button>
     </form>
-  </div>
 </body>
 </html>
