--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
     <header class="main-header">
       <nav class="navigation">
         <a class="header-logo" href="index.html"><img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop"></a>
@@ -236,7 +237,6 @@
     <li class="pagination-number"><a class="pagination-link" href="#">4</a></li>
     <li class="pagination-number"><a class="pagination-link" href="#">5</a></li>
   </ul>
-</div>
 </main>
 <footer class="main-footer">
 <ul class="social-btn">
@@ -258,5 +258,6 @@
 <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
 </div>
 </footer>
+</div>
 </body>
 </html>
