--- a/index.html
+++ b/index.html
@@ -92,38 +92,38 @@
       </article>
     </section>
     <ul class="product">
+      <div class="card-product">
       <li class="icy-cream-item">
-        <a class="icy-cream-item__link" href="#">
           <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
           <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-        </a>
-        <button type="button" class="button button--product">Быстрый просмотр</button>
+          <p class="icy-cream-item__description"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
       </li>
+      <button type="button" class="button button--product">Быстрый просмотр</button>
+        </div>
+     <div class="card-product">
       <li class="icy-cream-item">
-        <a class="icy-cream-item__link" href="#">
           <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
           <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description">Сливочно-кофейное с кусочками шоколада</p>
-        </a>
-        <button type="button" class="button button--product">Быстрый просмотр</button>
+          <p class="icy-cream-item__description"><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
       </li>
+      <button type="button" class="button button--product">Быстрый просмотр</button>
+    </div>
+    <div class="card-product">
       <li class="icy-cream-item">
-        <a class="icy-cream-item__link" href="#">
           <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
           <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description">Сливочно-клубничное с присыпкой из белого шоколада</p>
-        </a>
-        <button type="button" class="button button--product">Быстрый просмотр</button>
+          <p class="icy-cream-item__description"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
       </li>
+      <button type="button" class="button button--product">Быстрый просмотр</button>
+    </div>
+    <div class="card-product">
       <li class="icy-cream-item">
-        <a class="icy-cream-item__link" href="#">
           <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
           <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description">Сливочное крем-брюле с карамельной подливкой</p>
-        </a>
-        <button type="button" class="button button--product">Быстрый просмотр</button>
+          <p class="icy-cream-item__description"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
       </li>
+      <button type="button" class="button button--product">Быстрый просмотр</button>
+    </div>
     </ul>
     <section class="about-ice-cream">
       <h3 class="about-ice-cream__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
