пагинация, модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -231,11 +231,13 @@
     </ul>
   </section>
   <ul class="pagination-list">
-    <li class="pagination-number--current">1</li>
+    <li><a class="pagination-link-back" href="#"></a></li>
+    <li class="pagination-number"><a class="pagination-link pagination-link--current">1</a></li>
     <li class="pagination-number"><a class="pagination-link" href="#">2</a></li>
     <li class="pagination-number"><a class="pagination-link" href="#">3</a></li>
     <li class="pagination-number"><a class="pagination-link" href="#">4</a></li>
     <li class="pagination-number"><a class="pagination-link" href="#">5</a></li>
+    <li><a class="pagination-link-next" href="#"></a></li>
   </ul>
 </main>
 <footer class="main-footer">
