Подчеркивание у ссылок, карточки товара при наведении

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="header-logo"><img src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop">
             </a>
             <ul class="navigation-list">
-              <li class="navigation-list__item navigation-list__item--open"><a class="navigation-list__link" href="#">Каталог</a>
+              <li class="navigation-list__item navigation-list__item--open"><a class="navigation-list__link navigation-list__link--decor" href="#">Каталог</a>
               <ul class="navigation-menu">
                 <li class="navigation-menu__item navigation-menu__item--new"><a class="navigation-menu__link" href="#"><b>Новинки</b></a></li>
                 <li class="navigation-menu__item"><a class="navigation-menu__link" href="catalog.html">Сливочное</a></li>
@@ -26,9 +26,9 @@
                 <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Мелорин</a></li>
               </ul>
             </li>
-            <li class="navigation-list__item"><a class="navigation-list__link" href="#">Доставка и оплата</a>
+            <li class="navigation-list__item"><a class="navigation-list__link navigation-list__link--decor" href="#">Доставка и оплата</a>
           </li>
-          <li class="navigation-list__item"><a class="navigation-list__link" href="#">О Компании</a></li>
+          <li class="navigation-list__item"><a class="navigation-list__link navigation-list__link--decor" href="#">О Компании</a></li>
         </ul>
         <ul class="user-nav">
           <li class="user-nav__list user-nav__list--search"><button class="user-nav__btn btn-search" type="button" aria-label="Кнопка поиск"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg></button>
@@ -56,7 +56,6 @@
   </header>
   <main class="main-part">
     <h1 class="visually-hidden">Gllacy Shop</h1>
-
     <section class="slider">
       <div class="slider-controls">
         <label for="product-1">Первый</label>
@@ -78,7 +77,6 @@
         </li>
       </ul>
     </section>
-
     <section class="offers">
       <article class="offers-item offers-item--jam">
         <h2 class="offers-item__title">Малинка даром!</h2>
@@ -92,38 +90,30 @@
       </article>
     </section>
     <ul class="product">
-      <div class="card-product">
-      <li class="icy-cream-item product-hit">
-          <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-          <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
+      <li class="icy-cream-item icy-cream-item--hit">
+        <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+        <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
+        <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
-      <button type="button" class="button button--product">Быстрый просмотр</button>
-        </div>
-     <div class="card-product">
-      <li class="icy-cream-item product-hit">
-          <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-          <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description"><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
+      <li class="icy-cream-item icy-cream-item--hit">
+        <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+        <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
+        <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
-      <button type="button" class="button button--product">Быстрый просмотр</button>
-    </div>
-    <div class="card-product">
-      <li class="icy-cream-item product-hit">
-          <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-          <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
+      <li class="icy-cream-item icy-cream-item--hit">
+        <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+        <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
+        <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
-      <button type="button" class="button button--product">Быстрый просмотр</button>
-    </div>
-    <div class="card-product">
-      <li class="icy-cream-item product-hit">
-          <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-          <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-          <p class="icy-cream-item__description"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
+      <li class="icy-cream-item icy-cream-item--hit">
+        <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+        <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
+        <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
-      <button type="button" class="button button--product">Быстрый просмотр</button>
-    </div>
     </ul>
     <section class="about-ice-cream">
       <h3 class="about-ice-cream__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
@@ -141,26 +131,28 @@
       </article>
       <section class="block-item wrap-subscribe">
         <div class="subscribe">
-        <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
-        <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru">
-          <label class="visually-hidden" for="subscribe-email">Электронная почта</label>
-          <input class="nav-input nav-input--subscribe" type="email" name="email" id="subscribe-email" placeholder="Электронная почта">
-          <button class="button button--subscribe" type="submit">Отправить</button>
-        </form>
-      </div>
+          <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
+          <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru">
+            <label class="visually-hidden" for="subscribe-email">Электронная почта</label>
+            <input class="nav-input nav-input--subscribe" type="email" name="email" id="subscribe-email" placeholder="Электронная почта">
+            <button class="button button--subscribe" type="submit">Отправить</button>
+          </form>
+        </div>
       </section>
     </div>
   </main>
 </div>
-  <section class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+<section class="map">
+  <div class="map__container">
     <div class="address">
       <p class="address__info">Адрес главного офиса <br>и офлайн-магазина:<span class="address__bold">ул.Большая Конюшенная 19/8,Санкт-Петербург</span></p>
       <p class="address__info">Для заказов по телефону:<span class="address__bold">8 812 450-25-25</span>(с 10 до 20 ежедневно)</p>
       <button type="button" class="button button--feedback">Форма обратной связи</button>
     </div>
-  </section>
-  <div class="container">
+  </div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+</section>
+<div class="container">
   <footer class="main-footer">
     <ul class="social-btn">
       <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#"><span class="visually-hidden">Твитер</span></a></li>
@@ -184,14 +176,14 @@
 </div>
 <!--Всплывающее окно -->
 <section class="feedback">
-  <button class="feedback-close" type="button">Закрыть</button>
-  <h3 class="feedback-title">Мы обязательно вам ответим!</h3>
+<button class="feedback-close" type="button">Закрыть</button>
+<h3 class="feedback-title">Мы обязательно вам ответим!</h3>
 <form class="feedback-form" method="post" action="https://echo.htmlacademy.ru">
 <input class="nav-input feedback-form-input" type="text" name="name" placeholder="Как вас зовут?" aria-label="Как вас зовут">
 <input class="nav-input feedback-form-input" type="email" name="email" placeholder="Ваша почта для ответа?" aria-label="Ваша почта для ответа">
 <textarea class="nav-input feedback-form-text" name="text" rows="6" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь"></textarea>
 <div class="wrap-btn-feedback">
-<button type="submit" class="button feedback-btn">Отправить</button>
+  <button type="submit" class="button feedback-btn">Отправить</button>
 </div>
 </form>
 </section>
